--- a/style.css
+++ b/style.css
@@ -5,4 +5,6 @@
 body {
   background-color: var(--bg-body);
   background-image: url(./assets/bg.svg);
+  /*eixo X é o eixo horizontal*/
+  background-position-x: center;
 }
