--- a/style.css
+++ b/style.css
@@ -6,5 +6,6 @@ body {
   background-color: var(--bg-body);
   background-image: url(./assets/bg.svg);
   /*eixo X é o eixo horizontal*/
-  background-position-x: center;
+  background-position-x: center ;
+  background-position-y: 55%;
 }
