--- a/style.css
+++ b/style.css
@@ -9,3 +9,9 @@ body {
   background-position-x: center ;
   background-position-y: 55%;
 }
+
+#app {
+  border: 1px solid red;
+  width: fit-content;
+  margin: 52px auto;
+}
