--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
   --bg-body:#121214;
 }
 
+ul {
+  list-style: none;
+}
+
 body {
   background-color: var(--bg-body);
   background-image: url(./assets/bg.svg);
