--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 #app {
-  border: 1px solid red;
+  /*border: 1px solid red;*/
   width: fit-content;
   margin: 52px auto;
 }
@@ -34,4 +34,9 @@ header {
    border: 1px solid green; 
    padding: 32px 23px;
    text-align: center;
+}
+
+.card h2 {
+  padding: 8px 16px;
+  border: 1px s;
 }
