--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@
 :root {
   --bg-body:#121214;
   --bg-card: #1d1c19;
+
   --bd-h2: #746615;
+  --bd-card: #f7dd43;
 }
 
 ul {
@@ -33,10 +35,12 @@ header {
 }
 
 .card {
-   border: 1px solid green; 
-   padding: 32px 23px;
-   text-align: center;
+  /*border: 1px solid green;*/
+  padding: 32px 23px;
+  text-align: center;
 
+  background: var(--bg-card);
+  border-bottom: 2px solid var(--bd-card);
 
 }
 
