--- a/style.css
+++ b/style.css
@@ -46,6 +46,10 @@ header {
 }
 
 .card h2 {
+  display: flex;
+  gap: 16px;
+  justify-content: center;
+
   padding: 8px 16px;
   border: 1px solid var(--bd-h2);
   border-radius: 6px;
