--- a/style.css
+++ b/style.css
@@ -53,4 +53,7 @@ header {
   padding: 8px 16px;
   border: 1px solid var(--bd-h2);
   border-radius: 6px;
+
+  width: fit-content;
+  margin: auto;
 }
