--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
   --bd-card: #f7dd43;
 
   --tt-card-h2: #F7DD43;
+  --tt-card-span: #e1e1e6;
 
 }
 
@@ -25,6 +26,10 @@ body {
   /*eixo X é o eixo horizontal*/
   background-position-x: center ;
   background-position-y: 55%;
+}
+
+body * {
+  font-family: 'Roboto', sans-serif;
 }
 
 #app {
@@ -52,6 +57,7 @@ header {
   display: flex;
   gap: 16px;
   justify-content: center;
+  align-items: center;
 
   padding: 8px 16px;
   border: 1px solid var(--bd-h2);
@@ -63,3 +69,10 @@ header {
 
   color: var(--tt-card-h2);
 }
+
+.card h2 span {
+  color: var(--tt-card-span);
+  font-size: 14px;
+  text-transform: uppercase;
+}
+
