--- a/style.css
+++ b/style.css
@@ -76,3 +76,8 @@ header {
   text-transform: uppercase;
 }
 
+.card ul li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
