--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 
   --bd-h2: #746615;
   --bd-card: #f7dd43;
+  --bd-li: #323238;
 
   --tt-card-h2: #F7DD43;
   --tt-card-span: #e1e1e6;
@@ -81,6 +82,8 @@ header {
   display: flex;
   flex-direction: column;
   gap: 24px;
+
+  width: 270px;
 }
 
 .card ul li {
@@ -99,5 +102,5 @@ header {
 
 .card ul li + li {
   padding-top: 24px;
-  border-top: 1px solid red;
+  border-top: 1px solid var(--bd-li);
 }
