--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
   background-image: url(./assets/bg.svg);
   /*eixo X é o eixo horizontal*/
   background-position-x: center ;
-  background-position-y: 55%;
+  background-position-y: -715px;
 }
 
 body * {
