--- a/style.css
+++ b/style.css
@@ -111,3 +111,8 @@ header {
   padding-top: 24px;
   border-top: 1px solid var(--bd-li);
 }
+
+.card ul li strong:hover,
+.card ul li img {
+  transform: scale(1.1);
+}
