--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ header {
   border-top: 1px solid var(--bd-li);
 }
 
+.card h2,
 .card ul li strong:hover,
 .card ul li img:hover {
   transform: scale(1.1);
