--- a/style.css
+++ b/style.css
@@ -124,5 +124,15 @@ header {
   transition: transform 0.3s
 }
 
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 
 
