--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ header {
   border-top: 1px solid var(--bd-li);
 }
 
-.card h2,
+.card h2:hover,
 .card ul li strong:hover,
 .card ul li img:hover {
   transform: scale(1.1);
@@ -122,6 +122,10 @@ header {
 .card ul li strong,
 .card ul li img {
   transition: transform 0.3s
+}
+
+.card {
+  animation: appear .7s;
 }
 
 @keyframes appear {
