--- a/style.css
+++ b/style.css
@@ -141,5 +141,13 @@ header {
   }
 }
 
+@media (min-width: 700px){
+  #cards {
+    max-width: 670px;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+
 
 
