--- a/style.css
+++ b/style.css
@@ -18,6 +18,13 @@
 
 }
 
+body.blue {
+    --bd-card: #f7dd43;
+    --bd-h2: #746615;
+
+    --tt-card-h2: #F7DD43;
+}
+
 ul {
   list-style: none;
 }
