--- a/style.css
+++ b/style.css
@@ -170,3 +170,53 @@ header {
 
 
 
+/*TOGLEE*/
+
+.toggle {
+  margin-top: 2rem;
+  margin-right: 8rem;
+}
+
+input[type=checkbox]{
+  height: 0;
+  width: 0;
+
+  visibility: hidden;
+}
+
+label {
+  margin: auto;
+  cursor: pointer;
+  text-indent: -9999px;
+  width: 52px;
+  height: 27px;
+  background: var(--color-headings);
+  float: right;
+  border-radius: 100px;
+  position: relative;
+}
+
+label::after{
+  content: '';
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  width: 20px;
+  height: 20px;
+  background-color: #e1d6f0ee;
+  border-radius: 90px;
+  transition: 0.3s;
+}
+
+input:checked + label {
+  background-color: var(--color-headings);
+}
+
+input:checked + label::after {
+  left: calc(100% - 5px);
+  transform: translateX(-100%);
+}
+
+label:active:after {
+  width: 25px;
+}
