--- a/style.css
+++ b/style.css
@@ -16,13 +16,14 @@ html {
   --tt-card-span: #e1e1e6;
   --tt-card-ul-li-strong:#E1E1E6;
   --bg-image: url(./assets/bg-blue.svg);
+  --bg-image-yellow: url(./assets/bg-yellow.svg);
 }
 
-/*body.blue {
+body.blue {
     --bd-card: #338AF3;
     --bd-h2: #338AF3;
     --bg-card: #202024;
-    --bg-image: url(./assets/bg-blue.svg);
+    --bg-image-blue: url(./assets/bg-yellow.svg);
 }
 
 body.green {
@@ -30,7 +31,7 @@ body.green {
     --bd-h2: #047C3F;
     --bg-card: #1A1F1B; 
     --bg-image: url(./assets/bg-green.svg);
-}*/
+}
 
 ul {
   list-style: none;
