--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ html {
   --tt-card-span: #e1e1e6;
   --tt-card-ul-li-strong:#E1E1E6;
   --bg-image: url(./assets/bg-blue.svg);
+
   
 }
 
@@ -39,7 +40,7 @@ ul {
 
 body {
   background-color: var(--bg-body);
-  background-image: var(--bg-image);
+  background-image: url(./assets/bg-yellow.svg);
   /*eixo X é o eixo horizontal
   background-position-x: center ;
   background-position-y: -715px;*/
