--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ ul {
 
 body {
   background-color: var(--bg-body);
-  background-image: url(./assets/bg-yellow.svg);
+  background-image: url(./assets/bg-blue.svg);
   /*eixo X é o eixo horizontal
   background-position-x: center ;
   background-position-y: -715px;*/
